--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,13 @@
 # THE SOFTWARE.
 
 name: fed
-version: 0.2.0
+version: 0.3.0
 author: Juan Mellado <jcmellado@gmail.com>
 homepage: http://code.google.com/p/dart-fed/
 description: Fast Explicit Difusion (FED)
 
 environment:
-  sdk: ">=0.8.10+6 <2.0.0"
+  sdk: ">=1.1.1"
 
-dependencies:
-  unittest: ">=0.9.0 <0.10.0"
+dev_dependencies:
+  unittest: ">=0.9.3"
